--- a/ludobackendc/train_config.json
+++ b/ludobackendc/train_config.json
@@ -5,7 +5,7 @@
   "log_store_subpath": "logs",
   "actor": {
     "checkpoints": [
-      "2024_Mar_01_18_32_59_800358"
+      "2024_Mar_03_10_46_30_811479"
     ],
     "best_checkpoint_index": 0,
     "max_experience_store_size": 100000,
@@ -13,19 +13,19 @@
     "final_game": 1000
   },
   "evaluator": {
-    "newest_checkpoint": "2024_Mar_01_18_32_59_800358",
-    "evaluated": true
+    "newest_checkpoint": "2024_Mar_03_11_31_12_036846",
+    "evaluated": false
   },
   "learner": {
-    "min_stored_games": 1000,
-    "batch_size": 64,
-    "initial_batch": 0,
+    "min_stored_games": 500,
+    "batch_size": 128,
+    "initial_batch": 200,
     "final_batch": 100000,
-    "save_every_batches": 10000,
+    "save_every_batches": 100,
     "lr_schedule": {
       "boundaries": [
-        1,
-        2
+        100,
+        5000
       ],
       "lrs": [
         0.01,
