- Load Tested and Bug fixed

--- a/ludobackendc/train_config.json
+++ b/ludobackendc/train_config.json
@@ -1,41 +1,1 @@
-{
-  "root_path": "D:\\Solving ludo\\ludobackendc\\agents\\agent1",
-  "checkpoints_subpath": "checkpoints",
-  "experience_store_subpath": "experience_store",
-  "log_store_subpath": "logs",
-  "actor": {
-    "checkpoints": [
-      "2024_Mar_03_11_31_12_036846",
-      "2024_Mar_03_10_46_30_811479"
-    ],
-    "best_checkpoint_indices": [
-      0
-    ],
-    "max_experience_store_size": 100000,
-    "initial_game": 0,
-    "final_game": 1000,
-    "load_networks_every_games": 10
-  },
-  "evaluator": {
-    "newest_checkpoint": "2024_Mar_03_11_31_12_036846",
-    "evaluated": false
-  },
-  "learner": {
-    "min_stored_games": 500,
-    "batch_size": 64,
-    "initial_batch": 200,
-    "final_batch": 100000,
-    "save_every_batches": 100,
-    "lr_schedule": {
-      "boundaries": [
-        100,
-        5000
-      ],
-      "lrs": [
-        0.01,
-        0.001,
-        0.0001
-      ]
-    }
-  }
-}
+{"root_path": "E:\\ludo_agents\\agent1", "checkpoints_subpath": "checkpoints", "experience_store_subpath": "experience_store", "log_store_subpath": "logs", "actor": {"checkpoints": ["2024_Mar_03_17_39_56_834806", "2024_Mar_03_14_40_37_442240"], "best_checkpoint_indices": [1], "max_experience_store_size": 100000, "initial_game": 1000, "final_game": 10000, "load_networks_every_games": 10}, "evaluator": {"newest_checkpoint": "2024_Mar_03_20_49_25_153045", "evaluated": false, "max_checkpoints": 1000, "max_experience_store": 25000}, "learner": {"min_stored_games": 500, "batch_size": 64, "initial_batch": 20000, "final_batch": 1000000, "save_every_batches": 10000, "lr_schedule": {"boundaries": [1000000], "lrs": [0.001, 0.0001]}}}
